# ReaderHelperAI

./: CMakeLists.txt  Doxyfile.in  README.md
cmake/: FindFAISS.cmake  book_recommender-config.cmake.in  dependencies.cmake
data/raw/: books.csv
examples/: CMakeLists.txt  basic_usage.cpp  interactive_cli.cpp
include/book_recommender/: Book.hpp  BookDataLoader.hpp  BookPreprocessor.hpp  BookQueryEngine.hpp  BookRecommender.hpp  BookVectorStore.hpp
libs/book_recommender/: BookDataLoader.hpp  BookPreprocessor.hpp  BookQueryEngine.hpp  BookVectorStore.hpp  Document.hpp  Types.hpp
models/BAAI/bge-small-en-v1.5/: convert_model.py
scripts/: benchmark.py  setup_environment.sh
src/core/: Book.cpp  BookRecommender.cpp  Document.cpp
src/data/: BookDataLoader.cpp  BookPreprocessor.cpp
src/indexing/: BookVectorStore.cpp
src/query/: BookQueryEngine.cpp
src/utils/: GroqClient.cpp  GroqClient.hpp
tests/: main.cpp
tests/unit/: test_book.cpp  test_data_loader.cpp  test_groq_client.cpp  test_query_engine.cpp  test_vector_score.cpp
